Fix controller declaration

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,7 @@
 services:
     sherlockode_configuration.controller.parameter:
         class: Sherlockode\ConfigurationBundle\Controller\ParameterController
+        public: true
         arguments:
             - '@sherlockode_configuration.parameter_manager'
 
