Handle field types with strategy

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -11,6 +11,8 @@ services:
             - '@doctrine.orm.entity_manager'
             - '%sherlockode_configuration.parameter_class%'
             - '%sherlockode_configuration.parameters%'
+    sherlockode_configuration.field_manager:
+        class: Sherlockode\ConfigurationBundle\Manager\FieldTypeManager
     sherlockode_configuration.form.parameters:
         class: Sherlockode\ConfigurationBundle\Form\Type\ParametersType
         arguments:
@@ -21,7 +23,9 @@ services:
         class: Sherlockode\ConfigurationBundle\Form\Type\ParameterType
         arguments:
             - '%sherlockode_configuration.parameter_class%'
+            - '@sherlockode_configuration.field_manager'
         tags:
             - {name: form.type }
 
     Sherlockode\ConfigurationBundle\Manager\ParameterManager: '@sherlockode_configuration.parameter_manager'
+    Sherlockode\ConfigurationBundle\Manager\FieldTypeManager: '@sherlockode_configuration.field_manager'
