Add entity field type

--- a/Resources/config/field_types.yml
+++ b/Resources/config/field_types.yml
@@ -19,3 +19,9 @@ services:
         class: Sherlockode\ConfigurationBundle\FieldType\ChoiceField
         tags:
             - {name: sherlockode_configuration.field }
+    sherlockode_configuration.field.entity:
+        class: Sherlockode\ConfigurationBundle\FieldType\EntityField
+        arguments:
+            - '@doctrine.orm.entity_manager'
+        tags:
+            - {name: sherlockode_configuration.field }
