--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "php": "^5.6|^7.1",
         "symfony/framework-bundle": "^3.3|^4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
+    },
     "autoload": {
         "psr-4": { "Sherlockode\\ConfigurationBundle\\": "" }
     }
