--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,37 @@
 version: 2
+
+common: &common
+  environment:
+    SYMFONY_DEPRECATIONS_HELPER: disabled
+    APP_ENV: test
+  steps:
+    - checkout
+    - run: composer install --no-scripts
+    - run: php ./vendor/bin/phpunit
+
+
 jobs:
-  build:
+  test56:
+    docker:
+      - image: circleci/php:5.6
+    <<: *common
+  test71:
     docker:
       - image: circleci/php:7.1
-    environment:
-      SYMFONY_DEPRECATIONS_HELPER: disabled
-      APP_ENV: test
-    steps:
-      - checkout
-      - run: composer install --no-scripts
-      - run: php ./vendor/bin/phpunit
+    <<: *common
+  test72:
+    docker:
+      - image: circleci/php:7.2
+    <<: *common
+  test73:
+    docker:
+      - image: circleci/php:7.3
+    <<: *common
+workflows:
+    version: 2
+    build:
+        jobs:
+            - test56
+            - test71
+            - test72
+            - test73
