--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/framework-bundle": "^3.3|^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^5.7|^6.5"
     },
     "autoload": {
         "psr-4": { "Sherlockode\\ConfigurationBundle\\": "" }
