--- a/Resources/config/field_types.yml
+++ b/Resources/config/field_types.yml
@@ -1,14 +1,6 @@
 services:
-    sherlockode_configuration.field.text:
-        class: Sherlockode\ConfigurationBundle\FieldType\TextField
-        tags:
-            - {name: sherlockode_configuration.field }
-    sherlockode_configuration.field.textarea:
-        class: Sherlockode\ConfigurationBundle\FieldType\TextareaField
-        tags:
-            - {name: sherlockode_configuration.field }
-    sherlockode_configuration.field.url:
-        class: Sherlockode\ConfigurationBundle\FieldType\UrlField
+    sherlockode_configuration.field.simple:
+        class: Sherlockode\ConfigurationBundle\FieldType\SimpleField
         tags:
             - {name: sherlockode_configuration.field }
     sherlockode_configuration.field.datetime:
