--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.1",
-        "symfony/framework-bundle": "^3.3|^4.0"
+        "php": "^7.1",
+        "symfony/framework-bundle": "^3.4|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7|^6.5"
