--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "symfony/framework-bundle": "^3.4|^4.0|^5.0"
+        "php": "^7.1|^8.0",
+        "symfony/framework-bundle": "^3.4|^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.5"
+        "phpunit/phpunit": "^5.7|^6.5|^8.5"
     },
     "autoload": {
         "psr-4": { "Sherlockode\\ConfigurationBundle\\": "" }
