--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "symfony/framework-bundle": "^4.4|^5.0|^6.0"
+        "php": "^7.4 || ^8.0",
+        "symfony/framework-bundle": "^4.4 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^9.6"
     },
     "autoload": {
         "psr-4": { "Sherlockode\\ConfigurationBundle\\": "" }
