--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "symfony/framework-bundle": "^4.4 || ^5.0 || ^6.0",
-        "symfony/validator": "^4.4 || ^5.0 || ^6.0",
+        "php": "^8.0",
+        "symfony/framework-bundle": "^6.0 || ^7.0",
+        "symfony/validator": "^6.0 || ^7.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
